fix dynamic networks

--- a/plotting.ipynb
+++ b/plotting.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-09-01T16:03:32.950507Z",
-     "start_time": "2023-09-01T16:03:27.137687Z"
+     "end_time": "2023-09-04T07:02:44.385317590Z",
+     "start_time": "2023-09-04T07:02:42.909613173Z"
     }
    },
    "outputs": [],
@@ -54,14 +54,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-01T16:03:41.902972Z",
-     "start_time": "2023-09-01T16:03:41.879666Z"
+     "end_time": "2023-09-04T07:02:44.436049495Z",
+     "start_time": "2023-09-04T07:02:44.372983774Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "## new plots for regret/comm complexity vs. t\n",
@@ -69,7 +69,7 @@
     "# legends = [\"baseline\", \"Flooding-A\", \"gossiping\", \"Flooding\", \"Prob Flooding (0.5)\", \"IRS\"]\n",
     "legends = [\"baseline\", \"Flooding-A\", \"gossiping\", \"Flooding\", \"Prob Flooding (0.5)\", \"IRS\"]\n",
     "# for dynamic in [\"\"]:\n",
-    "for dynamic in [\"_dynamic_sparse\"]:\n",
+    "for dynamic in [\"_dynamic_dense\", \"_dynamic_sparse\"]:\n",
     "    if dynamic == \"\":\n",
     "        RGs = ['ER', 'BA', 'SBM']\n",
     "    else:\n",
@@ -101,8 +101,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-01T16:03:44.352823Z",
-     "start_time": "2023-09-01T16:03:42.343318Z"
+     "end_time": "2023-09-04T08:02:29.460913483Z",
+     "start_time": "2023-09-04T08:02:26.855626781Z"
     }
    }
   },
